Fix: 보너스 번호가 당첨번호와 중복되면 다시 안 받는 점 수정
보너스 번호가 당첨번호와 중복되면 다시 안 받는 버그를 수정하였다.